# Gravity-basins

./: CMakeLists.txt  LICENSE
include/: ForceCalculation.hpp  Planet.hpp  StaticPlanet.hpp
src/: ForceCalculation.cpp  Planet.cpp  StaticPlanet.cpp  main.cpp
